{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 63,
  "lineage": "3afa6678-4c1d-3c6e-fe77-039cfd65fd7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032a70117f358d3d9",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:elastic-ip/eipalloc-032a70117f358d3d9",
            "association_id": "eipassoc-0728ae2ba280123c4",
            "domain": "vpc",
            "id": "eipalloc-032a70117f358d3d9",
            "instance": "i-06e59846bb888ebb7",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-018a02e5b01dd3839",
            "private_dns": "ip-10-0-1-223.eu-west-1.compute.internal",
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-52-213-42-82.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.213.42.82",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b268c338b9a648a0",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:elastic-ip/eipalloc-0b268c338b9a648a0",
            "association_id": "eipassoc-05908b3dd8f9cf688",
            "domain": "vpc",
            "id": "eipalloc-0b268c338b9a648a0",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ba0590552ea5ce55",
            "private_dns": "ip-10-0-1-166.eu-west-1.compute.internal",
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-52-18-192-2.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.192.2",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a654b19fac3dc8c",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:elastic-ip/eipalloc-03a654b19fac3dc8c",
            "association_id": "eipassoc-0bd12310d87cd2f64",
            "domain": "vpc",
            "id": "eipalloc-03a654b19fac3dc8c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-007d66bfbb04b3c70",
            "private_dns": "ip-10-0-2-79.eu-west-1.compute.internal",
            "private_ip": "10.0.2.79",
            "public_dns": "ec2-54-75-190-243.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.190.243",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c39dd9b259ec4b27",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:instance/i-06e59846bb888ebb7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e59846bb888ebb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Adejare",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018a02e5b01dd3839"
              }
            ],
            "primary_network_interface_id": "eni-018a02e5b01dd3839",
            "private_dns": "ip-10-0-1-223.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-52-213-42-82.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.213.42.82",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a22bf128d12d4b06",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03543b209dc580580",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c7397eb120f583e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "i-06e59846bb888ebb7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c39dd9b259ec4b27",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:instance/i-0950eec63974702f7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0950eec63974702f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Adejare",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03b7cde8f215baed8"
              }
            ],
            "primary_network_interface_id": "eni-03b7cde8f215baed8",
            "private_dns": "ip-10-0-3-152.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.152",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bbeb4092a00475d1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0175b82458a1b3a09",
            "tags": {
              "Name": "db-server"
            },
            "tags_all": {
              "Name": "db-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022c2864771a20b8b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "i-0950eec63974702f7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c39dd9b259ec4b27",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:instance/i-0afea2863fb445c3e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afea2863fb445c3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Adejare",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-087421c69f099d4fc"
              }
            ],
            "primary_network_interface_id": "eni-087421c69f099d4fc",
            "private_dns": "ip-10-0-3-182.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.182",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d72c25b32126bbfc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0175b82458a1b3a09",
            "tags": {
              "Name": "web-server-1"
            },
            "tags_all": {
              "Name": "web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3896d095ebef159"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "i-0afea2863fb445c3e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c39dd9b259ec4b27",
            "arn": "arn:aws:ec2:eu-west-1:515052777243:instance/i-0ad38677048783d7a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad38677048783d7a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Adejare",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-080deb06f82393c75"
              }
            ],
            "primary_network_interface_id": "eni-080deb06f82393c75",
            "private_dns": "ip-10-0-3-24.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.24",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b1dd89cf4867afbb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0175b82458a1b3a09",
            "tags": {
              "Name": "web-server-2"
            },
            "tags_all": {
              "Name": "web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3896d095ebef159"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "i-0ad38677048783d7a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techcorp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:internet-gateway/igw-094ee8410e5ecb0ae",
            "id": "igw-094ee8410e5ecb0ae",
            "owner_id": "515052777243",
            "region": "eu-west-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:loadbalancer/app/techcorp-alb/4033abf0b66d1204",
            "arn_suffix": "app/techcorp-alb/4033abf0b66d1204",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-1135838919.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:loadbalancer/app/techcorp-alb/4033abf0b66d1204",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-09ede370980ccad1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022e6ec215385fb54"
              },
              {
                "subnet_id": "subnet-03543b209dc580580"
              }
            ],
            "subnets": [
              "subnet-022e6ec215385fb54",
              "subnet-03543b209dc580580"
            ],
            "tags": {
              "Name": "techcorp-alb"
            },
            "tags_all": {
              "Name": "techcorp-alb"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:loadbalancer/app/techcorp-alb/4033abf0b66d1204"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:listener/app/techcorp-alb/4033abf0b66d1204/e8706935094a541a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:listener/app/techcorp-alb/4033abf0b66d1204/e8706935094a541a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:loadbalancer/app/techcorp-alb/4033abf0b66d1204",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:listener/app/techcorp-alb/4033abf0b66d1204/e8706935094a541a"
          },
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
            "arn_suffix": "targetgroup/web-tg/80d5474cfedb2a84",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:515052777243:loadbalancer/app/techcorp-alb/4033abf0b66d1204"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-tg"
            },
            "tags_all": {
              "Name": "web-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84,i-0afea2863fb445c3e,80",
            "port": 80,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
            "target_id": "i-0afea2863fb445c3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "port": 80,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
            "target_id": "i-0afea2863fb445c3e"
          },
          "dependencies": [
            "aws_instance.web_1",
            "aws_lb_target_group.web_tg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84,i-0ad38677048783d7a,80",
            "port": 80,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
            "target_id": "i-0ad38677048783d7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "port": 80,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:515052777243:targetgroup/web-tg/80d5474cfedb2a84",
            "target_id": "i-0ad38677048783d7a"
          },
          "dependencies": [
            "aws_instance.web_2",
            "aws_lb_target_group.web_tg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b268c338b9a648a0",
            "association_id": "eipassoc-05908b3dd8f9cf688",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02b133f12181d0756",
            "network_interface_id": "eni-0ba0590552ea5ce55",
            "private_ip": "10.0.1.166",
            "public_ip": "52.18.192.2",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03543b209dc580580",
            "tags": {
              "Name": "techcorp-nat-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-1"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a654b19fac3dc8c",
            "association_id": "eipassoc-0bd12310d87cd2f64",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09028cae7032bcb23",
            "network_interface_id": "eni-007d66bfbb04b3c70",
            "private_ip": "10.0.2.79",
            "public_ip": "54.75.190.243",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-022e6ec215385fb54",
            "tags": {
              "Name": "techcorp-nat-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-2"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:route-table/rtb-05ac8bda5cb7ec3cc",
            "id": "rtb-05ac8bda5cb7ec3cc",
            "owner_id": "515052777243",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02b133f12181d0756",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "rtb-05ac8bda5cb7ec3cc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:route-table/rtb-0cae0b3182cb0e0bc",
            "id": "rtb-0cae0b3182cb0e0bc",
            "owner_id": "515052777243",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09028cae7032bcb23",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "rtb-0cae0b3182cb0e0bc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:route-table/rtb-09524ccc9f1f48d2e",
            "id": "rtb-09524ccc9f1f48d2e",
            "owner_id": "515052777243",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094ee8410e5ecb0ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "rtb-09524ccc9f1f48d2e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad942956a81ed67",
            "region": "eu-west-1",
            "route_table_id": "rtb-05ac8bda5cb7ec3cc",
            "subnet_id": "subnet-0175b82458a1b3a09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea41e19e7f82bcf",
            "region": "eu-west-1",
            "route_table_id": "rtb-0cae0b3182cb0e0bc",
            "subnet_id": "subnet-0cb5670ab5f5c5c64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5b3f095d963494f",
            "region": "eu-west-1",
            "route_table_id": "rtb-09524ccc9f1f48d2e",
            "subnet_id": "subnet-03543b209dc580580"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b9ee065e80f904",
            "region": "eu-west-1",
            "route_table_id": "rtb-09524ccc9f1f48d2e",
            "subnet_id": "subnet-022e6ec215385fb54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:security-group/sg-09ede370980ccad1c",
            "description": "Allow HTTP/HTTPS to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ede370980ccad1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "515052777243",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "sg-09ede370980ccad1c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:security-group/sg-07c7397eb120f583e",
            "description": "Allow SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c7397eb120f583e",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.89.45.136/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "515052777243",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "sg-07c7397eb120f583e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:security-group/sg-022c2864771a20b8b",
            "description": "Allow Postgres from Web SG + SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022c2864771a20b8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c7397eb120f583e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3896d095ebef159"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "515052777243",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "sg-022c2864771a20b8b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:security-group/sg-0a3896d095ebef159",
            "description": "Allow HTTP/HTTPS from anywhere + SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3896d095ebef159",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c7397eb120f583e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "515052777243",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "sg-0a3896d095ebef159",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:subnet/subnet-0175b82458a1b3a09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0175b82458a1b3a09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515052777243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "subnet-0175b82458a1b3a09",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:subnet/subnet-0cb5670ab5f5c5c64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5670ab5f5c5c64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515052777243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "subnet-0cb5670ab5f5c5c64",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:subnet/subnet-03543b209dc580580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03543b209dc580580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515052777243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "subnet-03543b209dc580580",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:subnet/subnet-022e6ec215385fb54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022e6ec215385fb54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515052777243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-076a6b1cb2da1c527"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "subnet-022e6ec215385fb54",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techcorp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:515052777243:vpc/vpc-076a6b1cb2da1c527",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f20b4d9adc758a6c",
            "default_route_table_id": "rtb-062c5303c4488bf31",
            "default_security_group_id": "sg-00339d81c6d2de9d8",
            "dhcp_options_id": "dopt-073e251c50fcf25b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076a6b1cb2da1c527",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062c5303c4488bf31",
            "owner_id": "515052777243",
            "region": "eu-west-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515052777243",
            "id": "vpc-076a6b1cb2da1c527",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}